v0.60 - Ongoing
===============

- Added drawButton() to 'drivers/lcd/tft/drawing.c'
- Updated 'drivers/lcd/tft/touchscreen.c' to do basic debouncing.
  tsReadZ() was added to detect pressure on the touch screen, and
  tsWaitForEvent() will only exit when the pressure passes a minimum
  threshold.  (Thanks to Limor for pointing out some code by Rossum
  for this.)
- Fixed some off-by-one pixel errors in cmd-test and elsewhere

v0.51 - 27 November 2010
========================

- Added simple RSA encryption/decryption driver.  Currently limited to
  using 64-bit and 32-bit numbers in key pairs, which isn't terribly secure,
  but allows much smaller code size than if huge number support was included.
- Added a driver for the MCP4725 I2C DAC (see "drivers/dac/mcp4725").
- Moved 'rom_drivers.h' from 'core/usbhid-rom' to 'core' since it can be used
  for usbmsd-rom as well if it is implemented at a later date.
- ili9325ReadData() added to ili9325.c by Adafruit Industries (thanks!)
- Modified FCLK_FAST() in 'drivers/fatfs/mmc.c' to set fast SPI speed
  to 18MHz instead of the previous 4MHz.  This allows for slightly faster
  rendering of bitmap images from SD cards, amongst other things.
- Fixed ILI9325 driver to use 0,0 based pixels and not 1x1, meaning the
  pixel co-ordinates are 0..239 for X and 0..319 for Y.  There may still be
  some off-by-one pixel issues that need to be further tested.

v0.50 - 26 October 2010
=======================

- Moved command.c and cmd_tbl.h to /project to try to keep all 
  project-specific files in one location to improve code-sharing and make
  upgrading easier
- Created seperate .c files for every command for the command-line interface
  to make it easier to maintain and share code between projects.  All commands
  listed in cmd_tbl.h are now stored in their own files in /project/commands 
  (ex.: "/project/commands/cmd_hello.c", etc.)
- Added a CLI command to demonstrate how to draw to the ILI9325 TFT LCD